npm i dotenv and nodemon and fixed structure

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.27.0",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "init": "^0.1.2",
@@ -33,5 +32,9 @@
     "multer": "^1.4.3",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.5.0"
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0",
+    "nodemon": "^2.0.13"
   }
 }
