--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "mongoose": "^6.0.8",
     "multer": "^1.4.3",
     "multer-storage-cloudinary": "^4.0.0",
-    "passport": "^0.5.0"
+    "passport": "^0.5.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
