--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-list-endpoints": "^6.0.0",
+    "express-validator": "^6.12.2",
     "http-errors": "^1.8.0",
     "init": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
