--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -e js -r dotenv/config ./server.js"
+    "dev": "ts-node-dev ./server.js"
   },
   "repository": {
     "type": "git",
@@ -39,6 +39,8 @@
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.3"
   }
 }
